# course-work

./: .gitignore  Answer.cpp  Answer.h  App.cpp  App.h  Authorization.cpp  Authorization.h  CMakeLists.txt  CRUD.cpp  CRUD.h  ClassDiagram.puml  Group.cpp  Group.h  GroupInterface.cpp  GroupInterface.h  Guest.cpp  Guest.h  Interface.cpp  Interface.h  JustInt.cpp  JustInt.h  Question.cpp  Question.h  Question_Many_Variants.cpp  Question_Many_Variants.h  Service.cpp  Service.h  SqlGateway.cpp  SqlGateway.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Test.cpp  Test.h  TestInterface.cpp  TestInterface.h  TestingInterface.cpp  TestingInterface.h  User.cpp  (+12 more)
